--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -64,8 +64,7 @@ jobs:
     #    uses a compiled language
 
     - run: |
-       cd hello-app\HelloWorldFunction
-       mvn test
+       mvn -B package --file hello-app/HelloWorldFunction/pom.xml
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v1
