--- a/hello-app/HelloWorldFunction/pom.xml
+++ b/hello-app/HelloWorldFunction/pom.xml
@@ -9,6 +9,10 @@
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+
+        <sonar.projectKey>eliashel_hello-product</sonar.projectKey>
+        <sonar.organization>eliashel</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
 
     <dependencies>
