--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,5 @@ hs_err_pid*
 hello-app/.aws-sam/build/template.yaml
 hello-app/HelloWorldFunction/dependency-reduced-pom.xml
 hello-app/HelloWorldFunction/target
+hello-app/HelloWorldFunction/HelloWorld.iml
+.idea
