--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -13,13 +13,19 @@ name: "CodeQL"
 
 on:
   push:
-    branches: [develop,quality,staging,master]
+    branches:
+      - master
+      - develop
+      - quality
+      - staging
   pull_request:
     # The branches below must be a subset of the branches above
-    branches: [ master ]
-  schedule:
-    - cron: '21 20 * * 4'
-
+    branches:
+      - master
+      - develop
+      - quality
+      - staging
+  
 jobs:
   analyze:
     name: Analyze
