--- a/hello-app/HelloWorldFunction/pom.xml
+++ b/hello-app/HelloWorldFunction/pom.xml
@@ -75,6 +75,11 @@
             <groupId>software.amazon.awssdk</groupId>
             <artifactId>apache-client</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>sns</artifactId>
+        </dependency>
         
 
 
